@@ -24,6 +24,16 @@
 #include <nxevent.h>
 
 /**
+ * Upgrade from 22.21 to 22.22
+ */
+static bool H_UpgradeFromV21()
+{
+   CHK_EXEC(CreateConfigParam(_T("Alarms.IgnoreHelpdeskState"), _T("0"), _T("If set alarm helpdesk state will be ignored when resolving or terminating."), NULL, 'B', true, false, false, false));
+   CHK_EXEC(SetMinorSchemaVersion(22));
+   return true;
+}
+
+/**
  * Upgrade from 22.20 to 22.21
  */
 static bool H_UpgradeFromV20()
@@ -391,6 +401,7 @@ static struct
    bool (* upgradeProc)();
 } s_dbUpgradeMap[] =
 {
+   { 21, 22, 22, H_UpgradeFromV21 },
    { 20, 22, 21, H_UpgradeFromV20 },
    { 19, 22, 20, H_UpgradeFromV19 },
    { 18, 22, 19, H_UpgradeFromV18 },
