@@ -6,6 +6,7 @@
 - Zone information added to alarm log, event log, SNMP trap log, and syslog
 - Fixed issues:
 	NX-922 (Service check template objects disappears after server restart)
+	NX-1097 (Configuration option to ignore alarm's helpdesk state when doing resolve or terminate)
 	NX-1397 (Implement Windows Update information parameters for Windows 10 and Windows Server 2016)
 	NX-1418 (Sort scripts in Execute Server Script dropdown)
 	NX-1419 (AgentTunnels.ProcessUnbound scheduled task should be hidden)
